[tool.poetry]
name = "ascender"
version = "0.1.0"
description = "Project template for XCCV group of cvpaper.challenge."
license = "MIT"
authors = ["cvpaper.challenge XCCV group"]
maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
readme = "README.md"
keywords = [
    "ascender",
    "Python",
    "projects",
    "project templates",
    "project directory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
pytorch3d = {url = "https://www.piwheels.org/simple/pytorch3d/pytorch3d-0.0.1-py3-none-any.whl#sha256=b5bcd6ccb3c17dcbc36a41cd4196ad7bbd86142d22e95433b8a0f02171453513"}
ffmpeg = "^1.4"
numpy = "^1.23.1"
torchaudio = "^0.12.0"
torchvision = "^0.13.0"
javascript = "^2015.32.59"
opencv-python = "^4.6.0"
python_speech_features = "^0.6"
pickle-secure = {url = "https://files.pythonhosted.org/packages/c1/56/a2d3534efa3480d1d50eaa0b6c003fdd2ee8fbdf2fae6e7772b6e6681cd4/pickle_secure-0.9.99-py3-none-any.whl"}
matplotlib = "^3.5.2"
scikit-image = "^0.19.3"
Pillow = "^9.2.0"
tqdm = "^4.64.0"
cmake = "^3.22.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
